--- a/Problem 3.html
+++ b/Problem 3.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1><u><em>The Square and The Circle</em></u></h1>
+  <h1><u><em>Math Fallacy</em></u></h1>
 
   <p><em>Adapted from <a href="https://www.youtube.com/watch?v=SGUZ-8u1OxM">MindYourDecisions</a></em></p>
 
