Pure HTML Version 1

--- a/Problem 3.html
+++ b/Problem 3.html
@@ -16,7 +16,7 @@
   <p> Find the fallacy in the proof shown above.
   </p>
 
-  <h3><a href="Solution 3.html">The Square and The Circle Solution</a></h3>
+  <h3><a href="Solution 3.html">Math Fallacy</a></h3>
 
 </body>
 
