CSS Website Version 1
CSS Website Version 1

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
   </div>
 
   <div class="bottom-container">
-    <a class="footer-link" href="../HTML Personal Site/index.html">Website</a>
+    <a class="footer-link" href="HTML Personal Site/index.html">Website</a>
     <a class="footer-link" href="https://www.linkedin.com/in/chan-guan-hao/">LinkedIn</a>
     <a class="footer-link" href="https://www.instagram.com/just_cgh/">Instagram</a>
     <a class="footer-link" href="https://open.spotify.com/user/1182471333?si=PsdzdMq-TSSVzqYgzGuuVA">Spotify</a>
     <a class="footer-link" href="https://www.facebook.com/changuanhao1">Facebook</a>
-    <a class="footer-link" href="../HTML Personal Site/Math/Math.html">Try Some Math</a>
+    <a class="footer-link" href="HTML Personal Site/Math/Math.html">Try Some Math</a>
     <p>© 2020 Chan Guan Hao.</p>
   </div>
 
