CSS Website Version 1
CSS Website Version 1

--- a/HTML Personal Site/index.html
+++ b/HTML Personal Site/index.html
@@ -30,7 +30,7 @@ html boilerplate: type html press tab
     with
     <strong>Minor in Computer Science </strong><br>
     <br>
-    Learning Web Development through Udemy Course:
+    Learning Web Development through Udemy Course: <br>
     <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2020 Web Development Bootcamp</a>
     by <a href="https://www.linkedin.com/in/angela-yu-963a584b/">Angela Yu</a>
   </p>
